--- a/Savio/SavingPlanSetupCells/SavingPlanTitleTableViewCell.xib
+++ b/Savio/SavingPlanSetupCells/SavingPlanTitleTableViewCell.xib
@@ -20,7 +20,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="My iPhone" borderStyle="line" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xnR-hA-FIB">
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="My iPhone" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xnR-hA-FIB">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                         <color key="backgroundColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -29,6 +29,9 @@
                         <color key="textColor" red="0.95686274510000002" green="0.69019607839999997" blue="0.2274509804" alpha="1" colorSpace="calibratedRGB"/>
                         <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="18"/>
                         <textInputTraits key="textInputTraits"/>
+                        <connections>
+                            <outlet property="delegate" destination="-1" id="WxH-Li-c9n"/>
+                        </connections>
                     </textField>
                 </subviews>
                 <constraints>
@@ -51,6 +54,9 @@
                     </mask>
                 </variation>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="titleTextField" destination="xnR-hA-FIB" id="4Hd-sa-IUI"/>
+            </connections>
             <point key="canvasLocation" x="646" y="173"/>
         </tableViewCell>
     </objects>
